# THRotator

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  CREDITS.txt  MANUAL.txt  README.md  THRotator.sln  appveyor-cov.yml  appveyor.yml  open-player-data-directory.bat
common/: ConfigureTHRotator.cmake  Direct3DUtils.h  EncodingUtils.cpp  EncodingUtils.h  ImageIO.cpp  ImageIO.h  StringResource.cpp  StringResource.h  THRotator.cpp  THRotator.rc  THRotatorDirect3D.cpp  THRotatorDirect3D.h  THRotatorEditor.cpp  THRotatorEditor.h  THRotatorExports.cpp  THRotatorExports.h  THRotatorImGui.cpp  THRotatorImGui.h  THRotatorLog.cpp  THRotatorLog.h  THRotatorSettings.cpp  THRotatorSettings.h  THRotatorSystem.cpp  THRotatorSystem.h  resource.h  stdafx.cpp  stdafx.h
d3d8/: CMakeLists.txt  d3d8.sln  d3d8.vcxproj  d3d8.vcxproj.filters  imgui_impl_dx8.cpp  imgui_impl_dx8.h  my_d3d8.def
d3d8/d3d8/: d3d8.h  d3d8.vcxproj  d3d8.vcxproj.filters  d3d8caps.h  d3d8types.h  d3d9.aps  d3d9.rc  d3dx8core.h  d3dx8effect.h  d3dx8math.h  d3dx8math.inl  d3dx8mesh.h  d3dx8shape.h  d3dx8tex.h  dxfile.h  my_d3d8.cpp  my_d3d8.def
d3d9/: CMakeLists.txt  d3d9.rc  d3d9.sln  d3d9.vcxproj  d3d9.vcxproj.filters  my_d3d9.cpp  my_d3d9.def
d3d9/x64/: X64Exports.asm
doc/: readme.html
doc/en/: conf.py  index.rst  make.bat
doc/en/pages/: development.rst  install.rst  releasenotes.rst  troubleshoot.rst  uninstall.rst  usage.rst
doc/html_files/: common.css  main.html  menu.html
doc/ja/: index.rst
doc/ja/pages/: development.rst  install.rst  releasenotes.rst  troubleshoot.rst  usage.rst
docs/: .gitignore  index.html
docs-source/: README.md  compile.bat  update.bat
docs-source/en/: index.rst
docs-source/en/pages/: development.rst  install.rst  releasenotes.rst  troubleshoot.rst  usage.rst
docs-source/ja/: Makefile  conf.py  index.rst
docs-source/ja/pages/: development.rst  install.rst  releasenotes.rst  troubleshoot.rst  uninstall.rst  usage.rst
docs/en/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/en/_sources/: index.rst.txt
docs/en/_sources/pages/: development.rst.txt  install.rst.txt  releasenotes.rst.txt  uninstall.rst.txt  usage.rst.txt
docs/en/pages/: development.html  install.html  releasenotes.html  troubleshoot.html  uninstall.html  usage.html
docs/ja/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/ja/_sources/: index.rst.txt
docs/ja/_sources/pages/: development.rst.txt  install.rst.txt  releasenotes.rst.txt  troubleshoot.rst.txt  usage.rst.txt
docs/ja/pages/: development.html  install.html  releasenotes.html  troubleshoot.html  uninstall.html  usage.html
internationalization/: AllNeutral.rcconfig  DoReverseMuiLoc.rcconfig  THRotator_i18n.cmake  dllmain.cpp  stdafx.cpp  stdafx.h
localization/: make_localization_ready.bat
localization_en-US/: CMakeLists.txt  THRotator_en-US.rc  localization_en-US.cpp  localization_en-US.vcxproj  localization_en-US.vcxproj.filters  resource.h
sample-config/: alcostg.exe.throtator  th07.exe.throtator  th08.exe.throtator  th095.exe.throtator  th10.exe.throtator  th11.exe.throtator  th12.exe.throtator  th125.exe.throtator  th128.exe.throtator  th13.exe.throtator  th14.exe.throtator  th143.exe.throtator  th15.exe.throtator  th16.exe.throtator  th165.exe.throtator  東方紅魔郷.exe.throtator
sample_ini/: throt_06.ini  throt_07.ini  throt_08.ini  throt_09.ini  throt_095.ini  throt_10.ini  throt_11.ini  throt_12.ini  throt_125.ini  throt_128.ini  throt_13.ini  throt_14.ini  throt_143.ini  throt_15.ini  throt_alcostg.ini  throt_天空璋.ini  throt_妖々夢.ini  throt_文花帖.ini  throt_神霊廟.ini  throt_紅魔郷.ini  throt_風神録.ini
